src/assets/css/Home.css
@keyframes start-bg {
    0% {background-position: left}
    100% {background-position: right}
}

.home {
    background: var(--gradient);
    min-height: 100vh;
    background-size: 400%;
    animation: start-bg 10s infinite alternate;
}
.home {
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 99vw;
}
.header p {
    margin: 2px;
}
.header {
    margin-top: 20px;
    display: flex;
    justify-content: space-around;
    width: 80vw;
    text-align: center;
    border-radius: 50px;
    box-shadow: 0 0 10px 10px var(--myGreen);   
}


.headerItem {
    display: flex;
    flex-direction: column;
    justify-items: space-between;
    justify-content : center;
    align-items: center;
}
#welcome {
    font-size: 300%;
}
#name {
    color: var(--myGoldenrod);
    font-size: 250%;
}
.email-container {
    display: flex;
}
.email-me, .resume {
    padding: 15px;
    color: var(--myGreen);
    margin-left: 1rem;
    margin-right: 1rem;
    font-size: 170%;
    text-decoration: none;
    background-color: transparent;
    border-radius: 20px;
}
.resume:hover, .email-me:hover {
    font-size: 180%;
}

.header-btn, .btn-header-about, .btn-header-home {
    font-family: "SF Mono", monospace;
    font-size: 2rem;
    font-weight: bold;
    width: 100%;
    color: var(--myGreen);
    padding: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    background-color: transparent;
}
.header-btn:hover, .btn-header-about:hover, .btn-header-home:hover,
.resume:hover, .email-me:hover, .project-title:hover {
    text-decoration:underline;
    text-decoration-style:dashed;
}
.nav-link {
    margin: 2rem;
}
.btn-header-about, .btn-header-home {
    font-size: 4.5rem;
    padding-left: 5rem;
    padding-right: 5rem;
    margin-bottom: 4rem;
    margin-top: 1.5rem;
}


.ityped-cursor {
    animation: blink 1s infinite;
    
  }
  @keyframes blink {
    50% {
      opacity: 1;
    }
    100%{
      opacity: 0;
    }
  }


.git-history-container {
    margin-top: 20px;
    padding: 1.5%;
    background-color: transparent;
    border-radius: 50px;
    max-width: 90vw;
}

.git-history {
    font-size: 5px;
}

/* PROJECTS */

.my-projects-header {
    font-size: 4em;
}

.project-list {
    columns: 2;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 80vw;
    justify-content: center;
    /* background-color: #011526; */
    text-align: center;
    border-radius: 50px;
    /* box-shadow: 0 0 10px 10px rgba(86, 161, 191, .8);    */
}

.project-container {
   display: flex;
   flex-direction: column;
   width: 50%;
}

.project {
    display: flex;
    justify-content: center;
    max-height: 100%;
    max-width: 100%;
    margin-bottom: 3em; 
}
.project-img {
    padding: 5px;
    border-radius: 15px;
    box-shadow: 0 0 10px 10px var(--myDarkGray);
    max-width: 90%;
}
.project-img:hover {
    border: 7px solid var(--myGreen);
}

.dis-a-tag {
    text-decoration: none;
    color: inherit;
}

.project-title {
    margin: 1rem;
    font-size: 3em;
    /* text-shadow: 0px 0px 15px  #1a77f2; */
}

.project-description {
    color: white;
    margin-bottom: 5em;
    align-self: center;
    background: black;
    max-width: 90%;
    /* width: 90%; */
    border-radius: 15px;
    box-shadow: 0 0 10px 10px var(--myDarkGray);  
    animation: show-des-ani 3s;
}
/* .project-description li {
    font-size: 120%;
} */
.description-p {
    font-size: 130%;
}
.hide-project-description {
    color:rgba(255, 255, 255, 0);
    height: 0rem;
    background: black;
    margin-bottom: 0em;
    box-shadow: 0 0 10px 10px rgba(86, 161, 191, 0);
    animation: hide-des-ani 3s;
}
.bulls {
    padding: 5px;
}

.p-icons {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.p-icon {
    background-color: var(--myWhite);
    margin: 0.8rem;
    width: 3.5rem;
    box-shadow: 3px 3px 10px;
}




@keyframes show-des-ani {
    from {
        transform: translateY(-60%);
        opacity: 0;
        position: relative;
        z-index: -50;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
    0% {color:rgba(255, 255, 255, 0)}
    0% {box-shadow: 0 0 0 0 rgba(86, 161, 191, .8)}
    0% {margin-bottom: 0rem}
    40% {color:rgba(255, 255, 255, 0)}
    100% {color:rgba(255, 255, 255, 1)}
    100% {margin-bottom: 5em;}
    100% {box-shadow: 0 0 10px 10px rgba(86, 161, 191, .8)}
}
@keyframes hide-des-ani {
    from {
        transform: translateY(0);
        opacity: 1;
    }
    to {
        transform: translateY(-60%);
        opacity: 0;
        position: relative;
        z-index: -50;
    }
    0% {color: white;}
    0% {margin-bottom: 5em;}
    0% {align-self: center;}
    0% {background: black;}
    0% {width: 60em;}
    0% {height: 100%;}
    0% {border-radius: 15px;}
    0% {box-shadow: 0 0 10px 10px rgba(86, 161, 191, .8);}
    30% {color:rgba(255, 255, 255, 0)}
    100% {color:rgba(255, 255, 255, 0)}
    100% {height: 0rem}
    100% {width: 60em;}
    100% {align-self: center;}
    100% {margin-bottom: 0em;}
    100% {box-shadow: 0 0 10px 10px rgba(86, 161, 191, 0)}
}






.back-btn {
    background-color: rgba(222, 20, 20, 0);
    color: #0455BF;
    width: 7em;
    height: 2.2em;
    font-weight: bold;
    font-size: 1.5em;
    border-radius: 5px;
    border: 3px solid #0455BF;
    background-image: var(--gradient);
    background-size: 300%;
    background-position: left;
    transition: background-position 1.5s;
    margin: 0.8em;
}



.show-des {
    color: white;
}
.hide-des {
    display: none;
}





@media screen and (max-width: 600px) {
    .header {
        display: flex;
        flex-flow: wrap;
        width: 80vw;
    }
}
@media screen and (max-width: 450px) {
    .header {
        margin-top: 10px;
        width: 90vw; 
    }
    #welcome {
        font-size: 260%;
    }
    .btn-header-project {
        margin: 0.5rem;
    }
    .btn-header-about, .btn-header-home {
        font-size: 2rem;
    }
    .email-container {
        display: grid;
    }
    .email-me, .resume {
        text-decoration:underline;
        text-decoration-style:dashed;
    }
    .email-me {
        padding: 5px;
        font-size: 130%;
    }
    .project {
        margin: 1em;
        margin-bottom: 3em; 
    }
    .project-img {
        max-width: 100%;
    }
    .project-title {
        font-size: 2em;
    }
    .project-list, .project-container {
        width: 90vw;
    }
    .project-list {
        margin-bottom: 47%;
    }
    .git-repo{
        margin: 1rem;
    }
    .project-description li {
        font-size: 100%;
    }
    .description-p {
        font-size: 100%;
    }
    .p-icon {
        margin: 1rem;
        width: 20%;
    }
}

